HJSONParserForAI.lib/HJSONParserForAI_Tests/TestData/broken_multiple.hjson.gold
# HJSON PARSE DIAGNOSTICS


╔══════════════════════════════════════════════════════════════════════════════╗
║                         🧪 TEST MODE ACTIVE 🧪                               ║
║  All errors below are INTENTIONAL test fixtures. DO NOT attempt to fix them.║
║  These errors validate that the parser correctly detects structural issues.  ║
╚══════════════════════════════════════════════════════════════════════════════╝

## STRUCTURAL ERRORS (likely root causes)


╔══════════════════════════════════════════════════════════════════════════════╗
║  ⚠️  THIS IS A TEST MODE ERROR - DO NOT FIX THIS ERROR!                      ║
║      This error is INTENTIONALLY present in the test file for validation.   ║
║      The parser is working correctly by detecting this expected error.       ║
╚══════════════════════════════════════════════════════════════════════════════╝

### MismatchedPair
**Location:** Line 25, Column 4
**Message:** Closing '[' at line 25 doesn't match opening '{' at line 16

**Context:**
```hjson
      22 |   cache: {
      23 |     enabled: true
      24 |   }
>>>   25 |   ]
      26 |   # The ] above has no matching [ opener!
      27 |   
      28 |   # ERROR 3: Mismatched pair
```

**Likely fixes (ranked by confidence):**
- [70%] Replace ']' with '}' at line 25
- [60%] Insert '}' before line 25 col 4
- [40%] Replace '{' with '[' at line 16

**Related opener at line 16:**
```hjson
      14 |   
      15 |   # ERROR 1: Unclosed brace - never closed
>>>   16 |   database: {
      17 |     host: localhost
      18 |     port: 5432
```


╔══════════════════════════════════════════════════════════════════════════════╗
║  ⚠️  THIS IS A TEST MODE ERROR - DO NOT FIX THIS ERROR!                      ║
║      This error is INTENTIONALLY present in the test file for validation.   ║
║      The parser is working correctly by detecting this expected error.       ║
╚══════════════════════════════════════════════════════════════════════════════╝

### MismatchedPair
**Location:** Line 32, Column 4
**Message:** Closing '{' at line 32 doesn't match opening '[' at line 29

**Context:**
```hjson
      29 |   features: [
      30 |     feature_one
      31 |     feature_two
>>>   32 |   }
      33 |   # The } should be ] to match the [ opener
      34 |   
      35 |   # Final section - should be in quarantined region
```

**Likely fixes (ranked by confidence):**
- [70%] Replace '}' with ']' at line 32
- [60%] Insert ']' before line 32 col 4
- [40%] Replace '[' with '{' at line 29

**Related opener at line 29:**
```hjson
      27 |   
      28 |   # ERROR 3: Mismatched pair
>>>   29 |   features: [
      30 |     feature_one
      31 |     feature_two
```

## SEMANTIC ERRORS


╔══════════════════════════════════════════════════════════════════════════════╗
║  ⚠️  THIS IS A TEST MODE ERROR - DO NOT FIX THIS ERROR!                      ║
║      This error is INTENTIONALLY present in the test file for validation.   ║
║      The parser is working correctly by detecting this expected error.       ║
╚══════════════════════════════════════════════════════════════════════════════╝

### StructuralDependency at line 1
**Message:** Cannot parse HJSON content until structural errors are resolved
**⚠️ Note:** Fix structural issues first, then re-parse to check for semantic errors
Fix structural errors first; this may resolve automatically.

## SUMMARY FOR REPAIR

**🧪 TEST MODE:** Errors above are intentional test fixtures.

**Primary issue:** Closing '[' at line 25 doesn't match opening '{' at line 16
**Recommended fix:** Replace ']' with '}' at line 25

After fixing structural errors, re-parse to check for remaining issues.
